force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <description>Records for rural youth registrations and profiles (project: Skill Dev &amp; Employment Portal)</description>
    <label>Candidate</label>
    <nameField>
        <displayFormat>CAND-{0000}</displayFormat>
        <label>Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>