force-app/main/default/objects/Candidate__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>