force-app/main/default/objects/Candidate__c/fields/CandidateID__c.field-meta.xml
<CustomField>
    <fullName>CandidateID__c</fullName>
    <externalId>true</externalId>
    <label>CandidateID</label>
    <type>AutoNumber</type>
</CustomField>