force-app/main/default/objects/Candidate__c/fields/ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactNumber__c</fullName>
    <label>ContactNumber</label>
    <type>Phone</type>
</CustomField>