force-app/main/default/objects/Candidate__c/recordTypes/Experienced_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Experienced_Candidate</fullName>
    <active>true</active>
    <label>	Experienced Candidate</label>
</RecordType>