force-app/main/default/objects/Candidate__c/recordTypes/Fresher_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Fresher_Candidate</fullName>
    <active>true</active>
    <label>Fresher Candidate</label>
</RecordType>