force-app/main/default/objects/Candidate__c/validationRules/Valid_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Email</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Email__c, &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,4}$&quot;))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>enter valid email</errorMessage>
</ValidationRule>